# rdu

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  README.md  test-du-output.txt
benches/: benchmarks.rs
src/: entries.rs  entry.rs  main.rs
